--- a/report.bib
+++ b/report.bib
@@ -1,3 +1,9 @@
+@misc{amp,
+	author = {{Maxim Integrated Products}},
+	title = {{MAX4465-MAX4469}},
+	year = {2001},
+	month = 4,
+}
 
 @book{aip,
 	author = {Wong, George S.K.; Embleton, Tony F.W.},
